--- a/app/index.html
+++ b/app/index.html
@@ -5,111 +5,116 @@ engine: ejs
 current: index
 ---
 
-<img src="./assets/images/week3/banner.png" class="main-img-lg" alt="">
-<img src="./assets/images/week3/banner-sm.png" class="main-img-ml"  alt="">
 <div class="main-img-title-box">
-    <div class="main-img-title-subtitle">Promise-Desert 2020 早春系列</div>
-    <div class="main-img-title-title">看得清，才能看得遠</div>
+    <img src="./assets/images/week3/banner.png" class="main-img-lg" alt="banner">
+    <img src="./assets/images/week3/banner-sm.png" class="main-img-ml"  alt="banner">
+    <div class="main-img-title-text-position">
+        <h3 class="main-img-title-subtitle">Promise-Desert 2020 早春系列</h3>
+        <h3 class="main-img-title-title">看得清，才能看得遠</h3>
+    </div>
 </div>
 <div class="main-text-box">
     <div class="main-text-box-w">
-        <div class="main-text-title">用專業的心，做專業的事</div>
-        <div class="main-text-subtitle-box">
-            <div class="box-w">
+        <h3 class="main-text-title">用專業的心，做專業的事</h3>
+        <ul class="main-text-subtitle-box">
+            <li class="box-w">
                 <img src="./assets/images/week3/icon-dollar.svg" alt="">
-                <div class="box-card-title">單一價格</div>
-                <div class="box-card-subtitle">無論任何度數皆不需追加費用 即可擁有適合自己的薄型球面 鏡片。</div>
-            </div>
-            <div class="box-w">
+                <h3>單一價格</h3>
+                <p>無論任何度數皆不需追加費用 即可擁有適合自己的薄型球面 鏡片。</p>
+            </li>
+            <li class="box-w">
                 <img src="./assets/images/week3/icon-clock.svg" alt="">
-                <div class="box-card-title">20 分鐘即可取件</div>
-                <div class="box-card-subtitle">為了您的寶貴時間著想，以豐 富專業知識與技術將結帳到交 件的時間縮減至最快 20 分鐘 即可完成。</div>
-            </div>
-            <div class="box-w box-mt-ml">
+                <h3>20 分鐘即可取件</h3>
+                <p>為了您的寶貴時間著想，以豐 富專業知識與技術將結帳到交 件的時間縮減至最快 20 分鐘 即可完成。</p>
+            </li>
+            <li class="box-w">
                 <img src="./assets/images/week3/icon-heart.svg" alt="">
-                <div class="box-card-title">安心售後服務</div>
-                <div class="box-card-subtitle">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</div>
-            </div>
-            <div class="box-w box-mt-ml">
+                <h3>安心售後服務</h3>
+                <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+            </li>
+            <li class="box-w">
                 <img src="./assets/images/week3/icon-glasses.svg" alt="">
-                <div class="box-card-title">關於鏡片</div>
-                <div class="box-card-subtitle">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</div>
+                <h3>關於鏡片</h3>
+                <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="main-classic-box">
+    <h3 class="main-classic-box-title">
+        經典系列鏡框
+    </h3>
+    <div class="main-classic-img-box">
+        <div class=" main-classic-img-box-f">
+            <img src="./assets/images/week3/product-1.png" class="img-w" alt="">
+            <div class="main-classic-img-box-subtitle-f">
+                <img src="./assets/images/week3/icon-diamond.svg" class="icon-w icon-l-m" alt="">
+                <h3 class="classic-subtitle">optical</h3>
+            </div>
+        </div>
+        <div class="main-classic-img-box-f main-classic-img-box-f-row-reverse">
+            <img src="./assets/images/week3/product-2.png" class="img-w" alt="">
+            <div class="main-classic-img-box-subtitle-f">
+                <img src="./assets/images/week3/icon-sun.svg" class="icon-w icon-l-m" alt="">
+                <h3 class="classic-subtitle text-r-m">sunglasses</h3>
+            </div>
+        </div>
+        <div class="main-classic-img-box-f">
+            <img src="./assets/images/week3/product-3.png" class="img-w" alt="">
+            <div class="main-classic-img-box-subtitle-f">
+                <img src="./assets/images/week3/icon-thunder.svg" class="icon-w icon-l-m" alt="">
+                <h3 class="classic-subtitle">functional</h3>
             </div>
         </div>
     </div>
 </div>
-<div class="main-classic-box">
-    <div class="main-classic-box-title">
-        經典系列鏡框
-    </div>
-    <div class="main-classic-img-box main-classic-img-box-f">
-        <img src="./assets/images/week3/product-1.png" class="img-w" alt="">
-        <img src="./assets/images/week3/icon-diamond.svg" class="icon-w icon-l-m" alt="">
-        <span class="classic-subtitle">optical</span>
-    </div>
-    <div class="main-classic-img-box showImg-lg">
-        <img src="./assets/images/week3/icon-sun.svg" class="icon-w icon-r-m" alt="">
-        <span class="classic-subtitle text-r-m">sunglasses</span>
-        <img src="./assets/images/week3/product-2.png" class="img-w" alt="">
-    </div>
-    <div class="main-classic-img-box showImg-ml">
-        <img src="./assets/images/week3/product-2.png" class="img-w" alt="">
-        <img src="./assets/images/week3/icon-sun.svg" class="icon-w icon-l-m" alt="">
-        <span class="classic-subtitle">sunglasses</span>
-    </div>
-    <div class="main-classic-img-box main-classic-img-box-f">
-        <img src="./assets/images/week3/product-3.png" class="img-w" alt="">
-        <img src="./assets/images/week3/icon-thunder.svg" class="icon-w icon-l-m" alt="">
-        <span class="classic-subtitle">functional</span>
-    </div>
-</div>
 <div class="main-feat-box">
-    <div class="main-feat-box-title">聯名設計鏡框</div>
+    <h3 class="main-feat-box-title">聯名設計鏡框</h3>
     <div class="main-feat-box-img">
         <div class="img-box-left">
             <div class="img-box-white">
-                <span class="img-title">Double A+</span>
+                <h3 class="img-title">Double A+</h3>
             </div>
         </div>
         <div class="img-box-right">
             <div class="img-box-white">
-                <div class="img-title">YOUTH</div>
+                <h3 class="img-title">YOUTH</h3>
             </div>
         </div>
     </div>
 </div>
 <div class="main-custom-box">
-    <div class="main-custom-box-title">顧客推薦</div>
-    <div class="box-cards">
-        <div class="box-w">
+    <h3 class="main-custom-box-title">顧客推薦</h3>
+    <ul class="box-cards">
+        <li class="box-w">
             <img src="./assets/images/week3/rec-1.png" alt="">
-            <div>Jessy</div>
-            <div>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</div>
-            <div>Last updated 3 mins ago</div>
-        </div>
-        <div class="box-w">
+            <p>Jessy</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>Last updated 3 mins ago</p>
+        </li>
+        <li class="box-w">
             <img src="./assets/images/week3/rec-2.png" alt="">
-            <div>Karen</div>
-            <div>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</div>
-            <div>Last updated 3 mins ago</div>
-        </div>
-        <div class="box-w box-m-ml">
+            <p>Karen</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>Last updated 3 mins ago</p>
+        </li>
+        <li class="box-w box-m-ml">
             <img src="./assets/images/week3/rec-3.png" alt="">
-            <div>Chelsea</div>
-            <div>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</div>
-            <div>Last updated 3 mins ago</div>
-        </div>
-        <div class="box-w box-m-ml">
+            <p>Chelsea</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>Last updated 3 mins ago</p>
+        </li>
+        <li class="box-w box-m-ml">
             <img src="./assets/images/week3/rec-4.png" alt="">
-            <div>Jane</div>
-            <div>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</div>
-            <div>Last updated 3 mins ago</div>
-        </div>
-    </div>
+            <p>Jane</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>Last updated 3 mins ago</p>
+        </li>
+    </ul>
 </div>
 <div class="main-form-box">
     <div class="main-form-box-w">
-        <div class="main-form-box-title">聯絡我們</div>
+        <h3 class="main-form-box-title">聯絡我們</h3>
         <div class="main-form-box-subtitle">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</div>
         <form action="">
             <div class="form-input-box">
