--- a/app/index.html
+++ b/app/index.html
@@ -69,18 +69,18 @@ current: index
     </div>
 </div>
 <div class="main-feat-box">
-    <h3 class="main-feat-box-title">聯名設計鏡框</h3>
-    <div class="main-feat-box-img">
-        <div class="img-box-left">
-            <div class="img-box-white">
-                <h3 class="img-title">Double A+</h3>
-            </div>
-        </div>
-        <div class="img-box-right">
-            <div class="img-box-white">
-                <h3 class="img-title">YOUTH</h3>
-            </div>
-        </div>
+    <div class="main-feat-box-w">
+        <h2>聯名設計鏡框</h2>
+        <ul class="main-feat-box-img">
+            <li class="img-box">
+                <img src="./assets/images/week3/product-8.png" alt="">
+                <h3>Double A+</h3>
+            </li>
+            <li class="img-box">
+                <img src="./assets/images/week3/product-9.png" alt="">
+                <h3>YOUTH</h3>
+            </li>
+        </ul>
     </div>
 </div>
 <div class="main-custom-box">
